# favicon-generator-cli

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: api.md  index.md  usage.md
docs/desenvolvimento/: configuracao.md  publicacao.md  testes.md
docs/guias/: instalacao.md  opcoes-cli.md  primeiros-passos.md
docs/referencia/: modulo.md
docs/stylesheets/: extra.css
favicon_generator/: __init__.py  cli.py  cli.py.bak  generator.py  metadata.py  optimizer.py  utils.py
tests/: test_generator.py
